# time-mcp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  time-mcp-server-spec.md
src/: auth.rs  config.rs  lib.rs  main.rs  models.rs  tools.rs
src/handlers/: http.rs  mcp.rs  mod.rs  stdio.rs
src/mcp/: messages.rs  mod.rs  server.rs
src/time_tools/: mod.rs
src/transports/: http.rs  mod.rs  stdio.rs
tests/: http_integration_tests.rs  integration_tests.rs  main_integration_tests.rs  unit_tests.rs
