[package]
name = "time-mcp-server"
version = "1.0.0"
edition = "2021"
description = "Model Context Protocol server providing time-related functionality"
license = "MIT"
authors = []

[[bin]]
name = "time-mcp-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
oauth2 = "4.4"
jsonwebtoken = "9.2"

[dev-dependencies]
tokio-test = "0.4"