[package]
name = "time-mcp-server"
version = "1.0.0"
edition = "2021"
description = "Model Context Protocol server providing time-related functionality"
license = "MIT"
authors = []

[[bin]]
name = "time-mcp-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
oauth2 = "4.4"
jsonwebtoken = "9.2"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
assert-json-diff = "2.0"
tempfile = "3.8"
reqwest = { version = "0.11", features = ["json"] }

[[test]]
name = "unit_tests"
path = "tests/unit_tests.rs"

[[test]]
name = "http_integration_tests"
path = "tests/http_integration_tests.rs"

[[test]]
name = "main_integration_tests"
path = "tests/main_integration_tests.rs"
